--- a/templates/base.html
+++ b/templates/base.html
@@ -5,19 +5,13 @@
 	<title>{% block title %}{% endblock %}</title>
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+  {% block custom_css %}{% endblock %}
 	<style>
 		.navbar-nav {
 			margin-left: auto;
 		}
 		.nav-item {
 			margin-right: 20px;
-		}
-		.profile-picture {
-			height: 30px;
-			width: 30px;
-			border-radius: 50%;
-			object-fit: cover;
-			margin-right: 5px;
 		}
 	</style>
 </head>
@@ -62,27 +56,3 @@
 </html>
 
 
-
-{% comment %} <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>{% block title %}{% endblock %}</title>
-  </head>
-  <body>
-    <nav>
-      <ul>
-        <li><a href="{% url 'study_spaces_app:HomePage' %}">Home</a></li>
-        {% if user.is_authenticated %}
-          <li><a href="{% url 'study_spaces_app:userManagement' %}">My account</a></li>
-          <li><a href="{% url 'study_spaces_app:Logout' %}">Logout</a></li>
-        {% else %}
-          <li><a href="{% url 'study_spaces_app:Login' %}">Login</a></li>
-          <li><a href="{% url 'study_spaces_app:Signup' %}">Sign up</a></li>
-        {% endif %}
-      </ul>
-    </nav>
-    {% block content %}
-    {% endblock %}
-  </body>
-</html> {% endcomment %}
