--- a/templates/login.html
+++ b/templates/login.html
@@ -1,19 +1,41 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>Login</h1>
-  {% if error_message %}
-    <p>{{ error_message }}</p>
-  {% endif %}
-  <form id="login" method="post" action="">
-    {% csrf_token %}
-    <label for="Username">Username:</label>
-    <input type="text" name="Username" value="" /><br>
-    <label for="Password">Password:</label>
-    <input type="password" name="Password" value="" /><br>
-    <input type="submit" value="Login" />
-  </form>
-  <br>
-  <p>Not registered yet?</p>
-  <button onclick="location.href='{% url 'study_spaces_app:Signup' %}'">Sign up</button>
+  <div class="row">
+    <div class="col-md-8 offset-md-2">
+      <h1 class="mb-4">Log in</h1>
+      {% if error_message %}
+        <div class="alert alert-danger" role="alert">
+          {{ error_message }}
+        </div>
+      {% endif %}
+      <form id="login" method="post" action="{% url 'study_spaces_app:Login' %}">
+        {% csrf_token %}
+        <div class="mb-3">
+          <label for="Username" class="visually-hidden">Username</label>
+          <div class="input-group">
+            <input type="text" class="form-control" name="LoginId" placeholder="Username or Email">
+          </div>
+        </div>
+        <div class="mb-3">
+          <label for="Password" class="visually-hidden">Password</label>
+          <div class="input-group">
+            <input type="password" class="form-control" name="Password" placeholder="Password">
+          </div>
+        </div>
+        <button type="submit" class="btn btn-primary">Log in</button>
+        {% if error_message %}
+          <div class="alert alert-danger" role="alert">
+            {{ error_message }}
+          </div>
+        {% endif %}
+      </form>
+      <div class="mt-3">
+        <p>Not registered yet?</p>
+        <a href="{% url 'study_spaces_app:Signup' %}" class="btn btn-secondary">Sign up</a>
+      </div>
+    </div>
+  </div>
 {% endblock %}
+
+
