added bootstrap base file to site,

--- a/templates/change_details.html
+++ b/templates/change_details.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'bootstrap-base.html' %}
 
-{% block content %}
+{% block body_block %}
 <h1>Change details of {{ request.user }}</h1>
 {% if errors %}
     <ul class="errors">
