--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'bootstrap-base.html' %}
 
-{% block content %}
+{% block body_block %}
 <h1> Sign Up </h1>
     <form id = "user_form" method="post" action="" enctype="multipart/form-data">
         {% csrf_token %}
