--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'bootstrap-base.html' %}
 
-{% block content %}
+{% block body_block %}
   <h1>Login</h1>
   {% if error_message %}
     <p>{{ error_message }}</p>
