--- a/templates/user_management.html
+++ b/templates/user_management.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'bootstrap-base.html' %}
 
-{% block content %}
+{% block body_block %}
 <h2>My Account:  {{request.user.username}}<h2>
     {% if user %}
     <p>{{request.user.email}}</p>
