--- a/templates/base.html
+++ b/templates/base.html
@@ -1,58 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>{% block title %}{% endblock %}</title>
-	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-  {% block custom_css %}{% endblock %}
-	<style>
-		.navbar-nav {
-			margin-left: auto;
-		}
-		.nav-item {
-			margin-right: 20px;
-		}
-	</style>
+    <meta charset="UTF-8">
+    <title>{% block title %}{% endblock %}</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    {% block custom_css %}{% endblock %}
+    <style>
+        .navbar-nav {
+            margin-left: auto;
+        }
+        .nav-item {
+            margin-right: 20px;
+        }
+        .profile-picture {
+            border-radius: 50%;
+            width: 30px;
+            height: 30px;
+          }
+          
+    </style>
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ADD8E6;">
-		<div class="container-fluid">
-			<a class="navbar-brand" href="{% url 'study_spaces_app:HomePage' %}">Study Spaces</a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav">
-				{% if user.is_authenticated %}
-            <li class="nav-item d-flex align-items-center">
-            {% if user.user_profile %}
-                <img class="profile-picture" src="{{ MEDIA_URL }}/{{ user.user_profile }}" alt="Profile Picture">
-            {% endif %}
-                <a class="nav-link" href="{% url 'study_spaces_app:userManagement' %}">My Account</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'study_spaces_app:Logout' %}">Logout</a>
-            </li>
-        {% else %}
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'study_spaces_app:Login' %}">Login</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'study_spaces_app:Signup' %}">Sign up</a>
-            </li>
-        {% endif %}
-				</ul>
-			</div>
-		</div>
-	</nav>
-	<div class="container mt-3">
-		{% block content %}
-		{% endblock %}
-	</div>
-	<!-- Bootstrap JavaScript -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ADD8E6;">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{% url 'study_spaces_app:HomePage' %}">Study Spaces</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                {% if user.is_authenticated %}
+                    <li class="nav-item d-flex align-items-center">
+                    {% if user.userprofile.user_profile %}
+                        <img class="profile-picture" src="{{ user.userprofile.user_profile.url }}" alt="Profile Picture">
+                    {% endif %}
+                        <a class="nav-link" href="{% url 'study_spaces_app:userManagement' %}">My Account</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'study_spaces_app:Logout' %}">Logout</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'study_spaces_app:Login' %}">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'study_spaces_app:Signup' %}">Sign up</a>
+                    </li>
+                {% endif %}
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container mt-3">
+        {% block content %}
+        {% endblock %}
+    </div>
+    <!-- Bootstrap JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
-
-
