--- a/templates/category.html
+++ b/templates/category.html
@@ -13,7 +13,7 @@
 
   .card-img-top {
     object-fit: cover;
-    height: 200px;
+    height: 300px;
     width: 500px;
     border-radius: 10px;
   }
@@ -31,8 +31,12 @@
 </style>
 {% endblock %}
 
-{% block body_block %}
+{% block title %}
+  {{ category_name }}
+{% endblock %}
 
+{% block body_block %}
+<h1>{{category_name}}</h1>
 {% for post in posts %}
 <div class="card mb-3">
   <div class="row no-gutters">
