--- a/templates/category.html
+++ b/templates/category.html
@@ -1,34 +1,8 @@
 {% extends 'bootstrap-base.html' %}
 
 {% block custom_css %}
-<style>
-  .card-header {
-    font-size: 24px;
-  }
 
-  .card-img-top {
-    height: 300px;
-    object-fit: cover;
-  }
-
-  .card-img-top {
-    object-fit: cover;
-    height: 300px;
-    width: 500px;
-    border-radius: 10px;
-  }
-
-  .card-text {
-    margin-bottom: 0.5rem;
-  }
-
-  .comments-header {
-    margin-top: 2rem;
-    margin-bottom: 1rem;
-    font-size: 24px;
-    font-weight: bold;
-  }
-</style>
+<link rel = "stylesheet" type="text/css" href="/static/css/categoryStyle.css">
 {% endblock %}
 
 {% block title %}
