Added css and js folder

--- a/templates/change_details.html
+++ b/templates/change_details.html
@@ -1,4 +1,5 @@
 {% extends 'bootstrap-base.html' %}
+{% load static %}
 
 {% block body_block %}
 <div class="row">
@@ -46,39 +47,6 @@
   </div>
 </div>
 
-<script>
-  function showInput(fieldName) {
-    var input = document.getElementById(fieldName);
-    
-    if (!input) {
-      var label = document.querySelector('label[for="' + fieldName + '"]');
-      input = document.createElement('input');
-      input.type = fieldName === 'password' ? 'password' : 'text';
-      input.name = fieldName;
-      input.id = fieldName;
-      input.className = 'form-control mt-2';
-      input.autocomplete = 'off';
-      input.oninput = enableSubmitButton;
-      
-      if (fieldName === 'user_profile') {
-        input.type = 'file';
-        input.accept = 'image/*';
-      }
-      
-      label.parentNode.insertBefore(input, label.nextSibling);
-    } else {
-      if (input.style.display === "none") {
-        input.style.display = "block";
-      } else {
-        input.style.display = "none";
-      }
-    }
-  }
-
-  function enableSubmitButton() {
-    document.getElementById("submit-button").disabled = false;
-  }
-  
-</script>
+<script src="{% static 'js/change_details.js' %}"></script>
 
 {% endblock %}
