Added title for each page

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,4 +1,9 @@
 {% extends 'bootstrap-base.html' %}
+{% load static %}
+
+{% block title_block %}
+    Homepage   
+{% endblock %}
 
 {% block content %}
 <h2>this is homepage</h2><br>
