--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,9 @@
 {% extends 'bootstrap-base.html' %}
+{% load static %}
+
+{% block title_block %}
+    Login page  
+{% endblock %}
 
 {% block body_block %}
   <div class="row">
