--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,4 +1,9 @@
 {% extends 'bootstrap-base.html' %}
+{% load static %}
+
+{% block title_block %}
+    Create a new account  
+{% endblock %}
 
 {% block body_block %}
 <div class="row">
