--- a/templates/bootstrap-base.html
+++ b/templates/bootstrap-base.html
@@ -3,7 +3,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block title_block %}
+        Find study spaces
+        {% endblock %}
+    </title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'css/bootstrap-base.css' %}">
