--- a/templates/change_details.html
+++ b/templates/change_details.html
@@ -1,6 +1,10 @@
 {% extends 'bootstrap-base.html' %}
 {% load static %}
 
+{% block title_block %}
+    Account settings  
+{% endblock %}
+
 {% block body_block %}
 <div class="row">
   <div class="col-md-8 offset-md-2">
