small fixes about title

--- a/templates/category.html
+++ b/templates/category.html
@@ -4,7 +4,7 @@
 <link rel = "stylesheet" type="text/css" href="/static/css/categoryStyle.css">
 {% endblock %}
 
-{% block title %}
+{% block title_block %}
   {{ category_name }}
 {% endblock %}
 
