--- a/templates/category.html
+++ b/templates/category.html
@@ -4,6 +4,10 @@
 <link rel = "stylesheet" type="text/css" href="/static/css/categoryStyle.css">
 {% endblock %}
 
+{% block title_block %}
+  {{ category_name }}
+{% endblock %}
+
 {% block body_block %}
 <h1>{{category_name}}</h1>
 {% for post in posts %}
