Fixed redirect location

--- a/templates/createPost.html
+++ b/templates/createPost.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-{% extends bootstrap-base.html %}
+{% extends 'bootstrap-base.html' %}
 
 {% block title %}Create a Post{% endblock %}
 
