fix the picture path

--- a/templates/category.html
+++ b/templates/category.html
@@ -14,7 +14,7 @@
 <div class="card mb-3">
   <div class="row no-gutters">
     <div class="col-md-4">
-      <img src="/static/images/{{ post.pictureName }}" alt="{{ post.pictureName }}" class="card-img-top img-thumbnail">
+      <img src="/media/post_images/{{ post.pictureName }}" alt="{{ post.pictureName }}" class="card-img-top img-thumbnail">
     </div>
     <div class="col-md-8">
       <div class="card-body">
