--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,10 +1,50 @@
 {% extends 'bootstrap-base.html' %}
-{% load static %}
+
+{% block custom_css %}
+<link rel = "stylesheet" type="text/css" href="/static/css/categoryStyle.css">
+{% endblock %}
 
 {% block title_block %}
-    Homepage   
+  {{ category_name }}
 {% endblock %}
 
 {% block body_block %}
-<h2>this is homepage</h2><br>
+<h1>{{category_name}}</h1>
+{% for post in posts %}
+<div class="card mb-3">
+  <div class="row no-gutters">
+    <div class="col-md-4">
+      <img src="/media/post_images/{{ post.pictureName }}" alt="{{ post.pictureName }}" class="card-img-top img-thumbnail">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title"><a href="{{post.category}}">{{ post.postName }}({{post.category}})</a></h5>
+        <p class="card-text">Poster :  {{ post.user_profile }}        ({{post.user_profile.getUserType}})</p>
+        <p class="card-text"><small class="text-muted">Address: {{ post.address }}</small></p>
+        <p class="card-text">Description:{{ post.description }}</p>
+        <p class="card-text">Likes 👍: {{ post.likes }}</p>
+
+      
+      </div>
+    </div>
+  </div>
+  <hr>
+  <div class="card-body">
+    <h3 class="comments-header">Comments</h3>
+
+
+
+    {% for comment in post.comment_set.all %}
+    <div class="card mb-3">
+      <div class="card-body">
+        <p class="card-text">{{ comment.comment }}</p>
+        <p class="card-text"><small class="text-muted">Comment by: {{ comment.user_profile }}</small></p>
+      </div>
+    </div>
+    {% empty %}
+    <p>No comments yet.</p>
+    {% endfor %}
+  </div>
+</div>
+{% endfor %}
 {% endblock %}
