--- a/templates/category.html
+++ b/templates/category.html
@@ -49,19 +49,30 @@
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
     {% endif %}
-
-
     {% for comment in post.comment_set.all %}
     <div class="card mb-3">
       <div class="card-body">
         <p class="card-text">{{ comment.comment }}</p>
         <p class="card-text"><small class="text-muted">Comment by: {{ comment.user_profile }}</small></p>
+        
+        {% if request.user == comment.user_profile.user %}
+        <form action="{% url 'delete_comment' comment_id=comment.id %}" method="post">
+          {% csrf_token %}
+          <button type="submit" class="btn btn-danger">Delete</button>
+        </form>
+        {% endif %}
+        
       </div>
     </div>
-    {% empty %}
+{% empty %}
     <p>No comments yet.</p>
+{% endfor %}
+
+    
+
+
     {% endfor %}
   </div>
 </div>
-{% endfor %}
+
 {% endblock %}
